WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165891
[iOS WK2] Don't disable position:fixed when a form element has focus
https://bugs.webkit.org/show_bug.cgi?id=165891
Summary
[iOS WK2] Don't disable position:fixed when a form element has focus
Simon Fraser (smfr)
Reported
2016-12-14 21:30:59 PST
[iOS WK2] Don't disable position:fixed when a form element has fous
Attachments
Patch
(15.21 KB, patch)
2016-12-14 21:35 PST
,
Simon Fraser (smfr)
wenson_hsieh
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(
deleted
)
2016-12-14 22:54 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews101 for mac-yosemite
(937.20 KB, application/zip)
2016-12-15 00:37 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(1.03 MB, application/zip)
2016-12-15 00:44 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews112 for mac-yosemite
(1.72 MB, application/zip)
2016-12-15 00:46 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-12-14 21:35:37 PST
Created
attachment 297163
[details]
Patch
WebKit Commit Bot
Comment 2
2016-12-14 21:38:05 PST
Attachment 297163
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1103: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit2/UIProcess/ios/WKContentView.mm:584: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2016-12-14 22:54:52 PST
Comment on
attachment 297163
[details]
Patch
Attachment 297163
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2726369
New failing tests: fast/visual-viewport/ios/zoomed-focus-in-fixed.html
Build Bot
Comment 4
2016-12-14 22:54:55 PST
Created
attachment 297171
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2016-12-15 00:37:16 PST
Comment on
attachment 297163
[details]
Patch
Attachment 297163
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2726793
New failing tests: fast/visual-viewport/ios/zoomed-focus-in-fixed.html
Build Bot
Comment 6
2016-12-15 00:37:20 PST
Created
attachment 297180
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-12-15 00:44:37 PST
Comment on
attachment 297163
[details]
Patch
Attachment 297163
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2726820
New failing tests: fast/visual-viewport/ios/zoomed-focus-in-fixed.html
Build Bot
Comment 8
2016-12-15 00:44:40 PST
Created
attachment 297181
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-12-15 00:46:46 PST
Comment on
attachment 297163
[details]
Patch
Attachment 297163
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2726794
New failing tests: fast/visual-viewport/ios/zoomed-focus-in-fixed.html
Build Bot
Comment 10
2016-12-15 00:46:50 PST
Created
attachment 297182
[details]
Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Wenson Hsieh
Comment 11
2016-12-15 07:30:18 PST
Comment on
attachment 297163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297163&action=review
LGTM other than the test expectations and a typo in the ChangeLog! However, I'm not a WK2 reviewer.
> Source/WebKit2/ChangeLog:30 > + (WebKit::WebPage::getAssistedNodeInformation): Don't reset the customtFixedPositionRect around computing element
customtFixedPositionRect => customFixedPositionRect
> LayoutTests/fast/visual-viewport/ios/zoomed-focus-in-fixed-expected.txt:2 > +CONSOLE MESSAGE: line 51: rect{"top":22,"right":155.359375,"bottom":43.484375,"left":20,"width":135.359375,"height":21.484375}
Are these console messages expected?
Simon Fraser (smfr)
Comment 12
2016-12-15 11:20:46 PST
https://trac.webkit.org/changeset/209867
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug